# h2blocks

./: .ghci  README.md  h2blocks.cabal  h2blocks.yaml  stack.yaml
Framework/: Agents.hs  Engine.hs  Signals.hs  Stoppable.hs  Timers.hs
src/: Blocks.hs  Conduits.hs  Main.hs  Prelude.hs  Tickers.hs  Types.hs
src/Blocks/: Memory.hs  Time.hs
src/H2Blocks/Data/: Block.hs  BlockProducer.hs  Blocks.hs  Builder.hs  Cache.hs  Config.hs  Container.hs  Duration.hs  Event.hs  MemoryUnit.hs  Pipes.hs  Ticker.hs  TimedPipes.hs
src/H2Blocks/Data/Block/: Builder.hs  Memory.hs  Time.hs
src/H2Blocks/Data/Blocks/: Memory.hs  Time.hs
src/H2Blocks/Data/I3BarIPC/: Input.hs  Output.hs
src/H2Blocks/System/: .gitignore  StatVFS.hsc  SysInfo.hsc
src/I3BarIPC/: Input.hs  Output.hs  Types.hs
src/I3BarIPC/Internal/: Options.hs
src/System/: StatVFS.hsc  SysInfo.hsc
src/Types/: Agents.hs  Config.hs  Input.hs  Output.hs
