name:                h2blocks
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/h2blocks#readme
license:             BSD3
license-file:        LICENSE
author:              Adirelle
maintainer:          adirelle@gmail.com
copyright:           2017 Adirelle
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable h2blocks
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Prelude
                     , Types.Input
                     , Types.Output
                     , Types.Config
                     , Types
                     , Tickers
                     , Blocks
                     , Blocks.Time
                     , Conduits
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , FlexibleContexts
  build-depends:       base-noprelude       >= 4.9.0  && < 5
                     , classy-prelude       >= 1.2.0  && < 2
                     , unix                 >= 2.7.2  && < 3
                     , aeson                >= 1.2.0  && < 2
                     , formatting           >= 6.2.4  && < 7
                     , text                 >= 1.2.2  && < 2
                     , bytestring           >= 0.10.8 && < 0.11
                     , yaml                 >= 0.8.22 && < 0.9
                     , scientific           >= 0.3.4  && < 0.4
                     , time                 >= 1.6.0  && < 2
                     , containers           >= 0.5.7  && < 0.6
                     , vector               >= 0.11.0 && < 0.12
                     , conduit              >= 1.2    && < 2
                     , stm-conduit          >= 3.0.0  && < 4
                     , conduit-combinators  >= 1.1.1  && < 2

