name:                h2blocks
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/h2blocks#readme
license:             BSD3
license-file:        LICENSE
author:              Adirelle
maintainer:          adirelle@gmail.com
copyright:           2017 Adirelle
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable h2blocks
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Prelude
                     , H2Blocks.Data.Block
                     , H2Blocks.Data.Block.Builder
                     , H2Blocks.Data.Block.Time
                     , H2Blocks.Data.I3BarIPC.Input
                     , H2Blocks.Data.I3BarIPC.Output
                     , H2Blocks.Data.Config
                     , H2Blocks.Data.Duration
                     , H2Blocks.Data.Event
                     , H2Blocks.Data.MemoryUnit
                     , H2Blocks.Data.TimedPipes
                     , H2Blocks.System.SysInfo
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , FlexibleContexts
  build-depends:       base-noprelude       >= 4.9.0  && < 5
                     , classy-prelude       >= 1.2.0  && < 1.3
                     , unix                 >= 2.7.2  && < 2.8
                     , aeson                >= 1.2.0  && < 1.3
                     , formatting           >= 6.2.4  && < 6.3
                     , text                 >= 1.2.2  && < 1.3
                     , bytestring           >= 0.10.8 && < 0.11
                     , yaml                 >= 0.8.22 && < 0.9
                     , scientific           >= 0.3.4  && < 0.4
                     , time                 >= 1.6.0  && < 1.7
                     , containers           >= 0.5.7  && < 0.6
                     , vector               >= 0.11.0 && < 0.12
                     , mtl                  >= 2.2.1  && < 2.3
                     , parsec               >= 3.1.11 && < 3.2
                     , clock                >= 0.7.2  && < 0.8
                     , unordered-containers >= 0.2.8  && < 0.3
                     , parsec-numeric       >= 0.1.0  && < 0.2
                     , pipes                >= 4.3.4  && < 4.4
                     , pipes-concurrency    >= 2.0.7  && < 2.1
                     , transformers         >= 0.5.2  && < 0.6
